# 4Semester_computer_science

./: README.md
1seminar/: .gitignore
1seminar/1task/: CMakeLists.txt  Makefile
1seminar/1task/include/: cat.h  dog.h
1seminar/1task/src/: cat.c  dog.c  main.c
1seminar/2task/: CMakeLists.txt
1seminar/2task/include/: animal.h  cat.h  dog.h
1seminar/2task/src/: cat.c  dog.c  main.c
2seminar/: CMakeLists.txt
2seminar/include/: animal.h  cat.h  class.h  dog.h  obj.h
2seminar/src/: animal.c  cat.c  class.c  dog.c  main.c  obj.c
semproject/: README.md
